# pbota

./: .gitignore  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  question.md
.github/workflows/: integration.yml
pbota-bot/: Cargo.toml
pbota-bot/src/: main.rs  parameters.rs
pbota-cli/: Cargo.toml
pbota-cli/src/: main.rs
pbota-core/: Cargo.toml
pbota-core/src/: char.rs  lib.rs  moves.rs
src/: char.rs  main.rs  moves.rs  parameters.rs
