[package]
name = "apocalypse-fuel"
version = "0.1.0"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
fastrand = "1"
serde = "1"
serde_json = "1"

[dependencies.tokio]
version = "1"
features = [ "rt-multi-thread" ]

[dependencies.serenity]
default-features = false
features = ["default_tokio_0_2", "gateway", "rustls_backend"]
version = "0.10"
