[package]
name = "pbota"
version = "0.1.0"
authors = ["Ryan Goldstein <ryan@ryanisaacg.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "1"
serde = "1"
serde_json = "1"

[dependencies.anyhow]
default-features = false
features = [ "std" ]
version = "1"

[dependencies.tokio]
version = "1"
features = [ "rt-multi-thread" ]

[dependencies.serenity]
default-features = false
features = ["cache", "framework", "gateway", "http", "rustls_backend", "standard_framework"]
version = "0.10"
