[package]
name = "pbota-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
default-features = false
features = [ "std" ]
version = "1"

[dependencies.serde]
features = [ "derive" ]
version = "1"

[dependencies.serde_json]
version = "1"
